# bevy_window_icon

./: Cargo.toml  README.md
examples/: simple.rs
src/: lib.rs
