[package]
name = "bevy_window_icon"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Lightweight localization in bevy"
homepage = "https://github.com/0crispy/bevy_window_icon"
repository = "https://github.com/0crispy/bevy_window_icon"
readme = "README.md"
documentation = "https://docs.rs/bevy_window_icon"

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_winit"
]}
winit = "0.28"
image = "0.24"
[dev-dependencies] 
bevy = "0.11"
